Updated header, footer, body style

--- a/styleguide/scss/_config-colors.scss
+++ b/styleguide/scss/_config-colors.scss
@@ -15,9 +15,9 @@ $base-colors: (
     graydarker:        (#757575, #ffffff, #ffffff, #ffffff),
     graydark:          (#999999, #ffffff, #ffffff, #ffffff),
     gray:              (#ababab, #ffffff, #ffffff, #ffffff),
-    graylight:         (#cdcdcd, #2b303a, #2b303a, #2b303a),
-    graylighter:       (#dfdfdf, #2b303a, #2b303a, #2b303a),
-    graylightest:      (#f5f5f5, #757575, #1f8dd6, #757575),
+    graylight:         (#cdcdcd, #000000, #2b303a, #2b303a),
+    graylighter:       (#dfdfdf, #000000, #2b303a, #2b303a),
+    graylightest:      (#f5f5f5, #000000, #1f8dd6, #757575),
     red:               (#ff6663, #ffffff, #ffffff, #ffffff),
     green:             (#468847, #ffffff, #ffffff, #ffffff),
     orange:            (#de8d0f, #ffffff, #ffffff, #ffffff),
