--- a/styleguide/scss/custom/_fonts.scss
+++ b/styleguide/scss/custom/_fonts.scss
@@ -3,6 +3,6 @@
 //-----------------------------------------------------------------------//
 
 // OPTIONAL: Specific to this implementation
-$font-logo: 'Quicksand', Helvetica, Arial, sans-serif;
+$font-logo: 'Quicksand', -apple-system, Helvetica, Calibri, Arial, sans-serif;
 
-@import url('https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Gudea|Quicksand');
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
