--- a/styleguide/scss/custom/_grids.scss
+++ b/styleguide/scss/custom/_grids.scss
@@ -138,7 +138,7 @@ body {
                                     $width: one-third
                                 );
 
-                                &:nth-child(3), &:nth-child(4) {
+                                &:nth-child(3), &:nth-child(4), &:nth-child(5) {
 
                                     @include sf-set-width (
                                         $from: tablet-portrait,
