--- a/styleguide/scss/custom/_typography.scss
+++ b/styleguide/scss/custom/_typography.scss
@@ -15,8 +15,13 @@
 // STYLES
 //-----------------------------------------------------------------------//
 
+* {
+    font-weight: 400;
+}
 
 h1, h2, h3, h4, h5, h6 {
+
+    font-weight: 600;
 
     > i.fa {
 
