--- a/styleguide/scss/core/_core-helpers.scss
+++ b/styleguide/scss/core/_core-helpers.scss
@@ -414,6 +414,45 @@
     }
 }
 
+@mixin set-vertical-unit-padding($include-mobile: true) {
+
+    @if ($include-mobile == true) {
+
+        padding-top: $vertical-unit-padding;
+        padding-bottom: $vertical-unit-padding;
+    }
+
+    @include sf-media($from: tablet-portrait) {
+
+        padding-top: $tablet-portrait-vertical-unit-padding;
+        padding-bottom: $tablet-portrait-vertical-unit-padding;
+    }
+
+    @include sf-media($from: tablet-landscape) {
+
+        padding-top: $tablet-landscape-vertical-unit-padding;
+        padding-bottom: $tablet-landscape-vertical-unit-padding;
+    }
+
+    @include sf-media($from: notebook) {
+
+        padding-top: $notebook-vertical-unit-padding;
+        padding-bottom: $notebook-vertical-unit-padding;
+    }
+
+    @include sf-media($from: desktop) {
+
+        padding-top: $desktop-vertical-unit-padding;
+        padding-bottom: $desktop-vertical-unit-padding;
+    }
+
+    @include sf-media($from: elastic) {
+
+        padding-top: $elastic-vertical-unit-padding;
+        padding-bottom: $elastic-vertical-unit-padding;
+    }
+}
+
 @mixin set-top-unit-padding($include-mobile: true) {
 
     @if ($include-mobile == true) {
