More grid examples markup blocks

--- a/styleguide/scss/custom/_grids.scss
+++ b/styleguide/scss/custom/_grids.scss
@@ -151,6 +151,11 @@ body {
 
                             > [role="gridcell"] {
 
+                                @include sf-set-width (
+                                    $from: tablet-portrait,
+                                    $width: one-third
+                                );
+
                                 &:nth-child(1) {
 
                                     @include sf-push (
