More grid samples

--- a/styleguide/scss/core/_core-flexbox-grid.scss
+++ b/styleguide/scss/core/_core-flexbox-grid.scss
@@ -127,6 +127,7 @@
     @if ($use-equal-heights == true) {
 
         $align-items: stretch;
+        $sf-fbg-gridcell-justify-content: flex-start !global;
         $sf-fbg-gridcell-presentation-height: 100% !global;
     }
 
