Grid example text added

--- a/styleguide/scss/core/_core-flexbox-grid.scss
+++ b/styleguide/scss/core/_core-flexbox-grid.scss
@@ -332,6 +332,11 @@
     }
 }
 
+@mixin sf-make-reverse() {
+
+    flex-direction: row-reverse;
+}
+
 @mixin sf-set-width (
     $from:false,
     $upto:false,
