--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -1694,28 +1694,36 @@ small {
   line-height: 1.3rem;
 }
 
-/* line 128, styleguide/scss/core/_core-typography.scss */
-code {
+/* line 130, styleguide/scss/core/_core-typography.scss */
+:not(pre) > code,
+:not(pre) > code[class*="language-"] {
   display: inline-block;
   color: #000000;
   background-color: #f5f5f5;
   margin: 0;
-  padding: 0.15rem 0.35rem;
+  padding: 0.1rem 0.5rem;
   border-radius: 0.15rem;
   font-size: 0.8rem;
 }
 
 /* line 74, styleguide/scss/core/_core-color.scss */
-code a:not([role="button"]) {
+:not(pre) > code a:not([role="button"]),
+:not(pre) > code[class*="language-"] a:not([role="button"]) {
   color: #1f8dd6;
 }
 
 /* line 79, styleguide/scss/core/_core-color.scss */
-code h1, code h2, code h3, code h4, code h5, code h6 {
+:not(pre) > code h1, :not(pre) > code h2, :not(pre) > code h3, :not(pre) > code h4, :not(pre) > code h5, :not(pre) > code h6,
+:not(pre) > code[class*="language-"] h1,
+:not(pre) > code[class*="language-"] h2,
+:not(pre) > code[class*="language-"] h3,
+:not(pre) > code[class*="language-"] h4,
+:not(pre) > code[class*="language-"] h5,
+:not(pre) > code[class*="language-"] h6 {
   color: #757575;
 }
 
-/* line 138, styleguide/scss/core/_core-typography.scss */
+/* line 142, styleguide/scss/core/_core-typography.scss */
 pre {
   display: block;
   margin-top: 0.8896rem;
@@ -1738,19 +1746,19 @@ pre h1, pre h2, pre h3, pre h4, pre h5, pre h6 {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 138, styleguide/scss/core/_core-typography.scss */
+  /* line 142, styleguide/scss/core/_core-typography.scss */
   pre {
     margin-top: 1.34rem;
     margin-bottom: 1.34rem;
   }
 }
 
-/* line 156, styleguide/scss/core/_core-typography.scss */
+/* line 160, styleguide/scss/core/_core-typography.scss */
 pre::-webkit-scrollbar {
   display: none;
 }
 
-/* line 163, styleguide/scss/core/_core-typography.scss */
+/* line 167, styleguide/scss/core/_core-typography.scss */
 pre[aria-label] {
   display: inline-block;
   overflow: visible;
@@ -1760,13 +1768,13 @@ pre[aria-label] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 163, styleguide/scss/core/_core-typography.scss */
+  /* line 167, styleguide/scss/core/_core-typography.scss */
   pre[aria-label] {
     padding: 0.0336rem 0.5025rem;
   }
 }
 
-/* line 177, styleguide/scss/core/_core-typography.scss */
+/* line 181, styleguide/scss/core/_core-typography.scss */
 pre:not([class*="language-"]) {
   margin-top: 0.8896rem;
   margin-bottom: 0.8896rem;
@@ -1774,7 +1782,7 @@ pre:not([class*="language-"]) {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 177, styleguide/scss/core/_core-typography.scss */
+  /* line 181, styleguide/scss/core/_core-typography.scss */
   pre:not([class*="language-"]) {
     margin-top: 1.34rem;
     margin-bottom: 1.34rem;
@@ -1782,7 +1790,7 @@ pre:not([class*="language-"]) {
   }
 }
 
-/* line 192, styleguide/scss/core/_core-typography.scss */
+/* line 196, styleguide/scss/core/_core-typography.scss */
 pre, pre[class*="language-"] {
   border-radius: 0;
   margin-top: 1rem;
@@ -1795,7 +1803,7 @@ pre, pre[class*="language-"] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 192, styleguide/scss/core/_core-typography.scss */
+  /* line 196, styleguide/scss/core/_core-typography.scss */
   pre, pre[class*="language-"] {
     border-radius: 0.25rem;
     margin: 0;
@@ -1805,26 +1813,26 @@ pre, pre[class*="language-"] {
   }
 }
 
-/* line 214, styleguide/scss/core/_core-typography.scss */
+/* line 218, styleguide/scss/core/_core-typography.scss */
 pre > code, pre[class*="language-"] > code {
   display: block;
   font-size: 1rem;
   line-height: 1.4;
 }
 
-/* line 221, styleguide/scss/core/_core-typography.scss */
+/* line 225, styleguide/scss/core/_core-typography.scss */
 pre:last-child, pre[class*="language-"]:last-child {
   margin-bottom: 0;
 }
 
-/* line 227, styleguide/scss/core/_core-typography.scss */
+/* line 231, styleguide/scss/core/_core-typography.scss */
 code[class*="language-"], pre[class*="language-"] {
   text-shadow: none !important;
   overflow: scroll;
   -ms-overflow-style: none;
 }
 
-/* line 234, styleguide/scss/core/_core-typography.scss */
+/* line 238, styleguide/scss/core/_core-typography.scss */
 hr {
   margin: 0;
   margin-bottom: 2rem;
@@ -1837,7 +1845,7 @@ hr {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 234, styleguide/scss/core/_core-typography.scss */
+  /* line 238, styleguide/scss/core/_core-typography.scss */
   hr {
     height: 0.15rem;
     min-height: 0.15rem;
